--- a/generators/flexi_layout/templates/layout.html.erb
+++ b/generators/flexi_layout/templates/layout.html.erb
@@ -7,6 +7,13 @@
     <%%= yield(:head) %>
   </head>
   <body>
+  <div id="top_nav">
+  	 <%% if logged_in? %>
+       Bem vindo <%%= current_user.username %>! | <%%= link_to "&raquo; Sair", logout_path, :class => 'logout' %>
+      <%% else %>
+        <%%= link_to "&raquo; Entrar", login_path, :class => 'login' %>
+      <%% end %>
+	</div>        	
   	<div id="header">
   		<%%= link_to image_tag("logo.png"), root_path %>
   	</div>
