Updated admin/home/index page

--- a/generators/flexi_layout/templates/admin_home_index.html.erb
+++ b/generators/flexi_layout/templates/admin_home_index.html.erb
@@ -9,4 +9,8 @@
 		<h2>Edite esta página em app/views/home/admin/index.html.erb</h2>
 		<p>Crie sua página administrativa.</p>
 	</li>
+	<li>
+		<h2>Gere seu scaffold</h2>
+		<p>ruby script/generate flexi_scaffold Post title:string body:text</p>
+	</li>	
 </ul>
