--- a/generators/flexi_authentication/templates/views/erb/admin_user_index.html.erb
+++ b/generators/flexi_authentication/templates/views/erb/admin_user_index.html.erb
@@ -28,6 +28,6 @@
       	<td width="8%"><%%=link_to 'Excluir', admin_user_url(user), :class=>'delete', :confirm => 'Tem certeza que deseja excluir?', :method => :delete %></td>
       <%% end %>
     </tr>
-  <% end %>
+  <%% end %>
 </table>
 <%%= will_paginate @users, :prev_label=>'&laquo; Anterior', :next_label=>'Próximo &raquo;' %>
