--- a/generators/flexi_layout/templates/layout.html.erb
+++ b/generators/flexi_layout/templates/layout.html.erb
@@ -9,7 +9,7 @@
   <body>
   <div id="top_nav">
   	 <%% if logged_in? %>
-       Bem vindo <%%= current_user.username %>! | <%%= link_to "&raquo; Sair", logout_path, :class => 'logout' %>
+       <%%= current_user.username %> | <%%= current_user.email %> | <%%= link_to "&raquo; Sair", logout_path, :class => 'logout' %>
       <%% else %>
         <%%= link_to "&raquo; Entrar", login_path, :class => 'login' %>
       <%% end %>
