--- a/generators/flexi_layout/templates/layout_site.html.erb
+++ b/generators/flexi_layout/templates/layout_site.html.erb
@@ -10,7 +10,11 @@
   	<div id="header">
   		<%%= link_to image_tag("logo.png"), root_path %>
   	</div>
-	<div id="container">    
+	<div id="container">
+		<%%- flash.each do |name, msg| -%>
+		   	<%%= content_tag :div, msg, :id => "flash_#{name}" %>
+		  <%%- end -%>    
+		  
 		<%%= yield %>
 	</div>
   </body>
