--- a/generators/flexi_layout/templates/layout.html.erb
+++ b/generators/flexi_layout/templates/layout.html.erb
@@ -15,7 +15,7 @@
       <%% end %>
 	</div>        	
   	<div id="header">
-  		<%%= link_to image_tag("logo.png"), root_path %>
+  		<%%= link_to image_tag("logo.png"), admin_home_url %>
   	</div>
 	<div id="container">
 		<div id="sidenav">
