--- a/generators/flexi_layout/templates/stylesheet_login.css
+++ b/generators/flexi_layout/templates/stylesheet_login.css
@@ -2,7 +2,7 @@ a {text-decoration: none;}
 a:hover {text-decoration: underline;}
 
 body {
-  background-color: #000;
+  background-color: #E6E6E6;
   font-family: Arial,Helvetica,sans-serif;
   font-size: 13px;
   color: #333333;
