Updated admin menu

--- a/generators/flexi_layout/templates/layout.html.erb
+++ b/generators/flexi_layout/templates/layout.html.erb
@@ -20,7 +20,9 @@
 	<div id="container">
 		<div id="sidenav">
 			<%% tabs do |tab| %>
-			  <%%= tab.users 'Usuários', admin_users_path %>
+			  <%%= tab.users admin_users_path do %>
+			  	<%%= image_tag 'users.png'  %> Usuários
+			  <%% end %>	
 			  <%%= tab.menu1 'Menu1', "#menu" %>
 			  <%%= tab.menu2 'Menu2', "#menu" %>
 			  <%%= tab.menu3 'Menu3', "#menu" %>
