--- a/generators/flexi_layout/templates/layout.html.erb
+++ b/generators/flexi_layout/templates/layout.html.erb
@@ -20,7 +20,7 @@
 	<div id="container">
 		<div id="sidenav">
 			<%% tabs do |tab| %>
-			  <%%= tab.users admin_users_path do %>
+			  <%% tab.users admin_users_path do %>
 			  	<%%= image_tag 'users.png'  %> Usuários
 			  <%% end %>	
 			  <%%= tab.menu1 'Menu1', "#menu" %>
