--- a/generators/flexi_layout/templates/stylesheet.css
+++ b/generators/flexi_layout/templates/stylesheet.css
@@ -7,7 +7,7 @@ body {
   font-family: Arial,Helvetica,sans-serif;
   font-size: 13px;
   color: #333333;
-  background-image:url(../images/bg_cinza.png); 
+  background-image:url(../images/bg.png); 
   background-repeat:repeat-x;
 }
 
