--- a/generators/flexi_layout/templates/stylesheet_login.css
+++ b/generators/flexi_layout/templates/stylesheet_login.css
@@ -24,7 +24,7 @@ div#title_box {
 	text-align:center;
 }
 
-label { font-weight:bold; vertical-align: center;}
+label { font-weight:bold;}
 
 h1, h2 { padding:2px; margin:2px; }
 
