--- a/generators/flexi_layout/templates/stylesheet_site.css
+++ b/generators/flexi_layout/templates/stylesheet_site.css
@@ -42,7 +42,7 @@ div#new_box { padding:15px 5px 5px 5px; }
 
 .pagination{ margin-top: 15px; text-align: center; }
 
-label { font-weight:bold; vertical-align: center;}
+label { font-weight:bold; }
 
 h1, h2 { padding:2px; margin:2px; }
 
