--- a/generators/flexi_layout/templates/stylesheet.css
+++ b/generators/flexi_layout/templates/stylesheet.css
@@ -114,11 +114,22 @@ a { color: #0000FF; }
   border: solid 5px #E4E2E2;
 }
 
-#flash_notice, #flash_error { padding: 10px; margin: 10px 0;}
-
-#flash_notice {background-color: #CFC; border: solid 1px #6C6; 	color: #1E5F1D; }
-
-#flash_error { background-color: #FCC; border: solid 1px #C66; color:#9E0B0F;  }
+#flash_notice, #flash_error { 
+	padding: 10px ; 
+	margin: 10px 0 0 0;
+	font-weight: bold;
+	text-align: center;
+ }
+#flash_notice {
+	background-color: #CFC; 
+	border: solid 1px #6C6; 
+	color: #1E5F1D;
+}
+#flash_error { 
+	background-color: #FCC; 
+	border: solid 1px #C66; 
+	color:#9E0B0F;
+}
 
 .fieldWithErrors { display: inline; }
 
