--- a/generators/flexi_layout/templates/stylesheet_login.css
+++ b/generators/flexi_layout/templates/stylesheet_login.css
@@ -51,8 +51,19 @@ a { color: #0000FF; }
   border: solid 5px #E4E2E2;
 }
 
-#flash_notice, #flash_error { padding: 5px 8px; margin: 10px 0; text-align:center;}
-
-#flash_notice {background-color: #CFC; border: solid 1px #6C6; }
-
-#flash_error { background-color: #FCC; border: solid 1px #C66; }
+#flash_notice, #flash_error { 
+	padding: 10px ; 
+	margin: 10px 0 0 0;
+	font-weight: bold;
+	text-align: center;
+ }
+#flash_notice {
+	background-color: #CFC; 
+	border: solid 1px #6C6; 
+	color: #1E5F1D;
+}
+#flash_error { 
+	background-color: #FCC; 
+	border: solid 1px #C66; 
+	color:#9E0B0F;
+}
