--- a/generators/flexi_scaffold/templates/views/erb/edit.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/edit.html.erb
@@ -1,14 +1,8 @@
-<%% title "Edit <%= singular_name.titleize %>" %>
+<%% title("Editando <%= singular_name.titleize %>") %>
 
-<%= render_form %>
-
-<%- if actions? :show, :index -%>
-<p>
-<%- if action? :show -%>
-  <%%= link_to "Show", @<%= singular_name %> %> |
-<%- end -%>
-<%- if action? :index -%>
-  <%%= link_to "View All", <%= plural_name %>_path %>
-<%- end -%>
-</p>
-<%- end -%>
+<%% form_for @<%= singular_name %> do |f| %>	
+  <%= render_form %>
+  <div id="control_box">
+    <%%= submit_tag "Alterar" %> | <%- if action? :index -%> <%%= link_to "Cancelar", <%= plural_name %>_path %> <%- end -%>
+  </div>   
+<%% end %>
