--- a/generators/flexi_scaffold/templates/views/erb/show.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/show.html.erb
@@ -9,12 +9,12 @@
 
 <p>
 <%- if action? :edit -%>
-  <%%= link_to "Edit", edit_<%= singular_name %>_path(@<%= singular_name %>) %> |
+  <%%= link_to "Editar", edit_<%= singular_name %>_path(@<%= singular_name %>) %> |
 <%- end -%>
 <%- if action? :destroy -%>
-  <%%= link_to "Destroy", @<%= singular_name %>, :confirm => 'Are you sure?', :method => :delete %> |
+  <%%= link_to "Excluir", @<%= singular_name %>, :confirm => 'Are you sure?', :method => :delete %> |
 <%- end -%>
 <%- if action? :index -%>
-  <%%= link_to "View All", <%= plural_name %>_path %>
+  <%%= link_to "Ver todos", <%= plural_name %>_path %>
 <%- end -%>
 </p>
