Changes in flexi_scaffold

--- a/generators/flexi_scaffold/templates/views/erb/index.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/index.html.erb
@@ -2,7 +2,7 @@
 
 <%- if action? :new -%>
   <div id="new_box">
-    <%%= link_to('Adicionar <%= singular_name.titleize %>', new_<%= singular_name %>_path, :class =>'new' %>
+    <%%= link_to('Adicionar <%= singular_name.titleize %>', new_<%= singular_name %>_path, :class =>'new') %>
   </div>	
 <%- end -%>
 
