--- a/generators/flexi_layout/templates/stylesheet.css
+++ b/generators/flexi_layout/templates/stylesheet.css
@@ -11,6 +11,11 @@ body {
   background-repeat:repeat-x;
 }
 
+input[type=text]{ border:1px solid #CCCCCC; }
+input[type=password] { border:1px solid #CCCCCC; }
+select{ border:1px solid #CCCCCC;}
+textarea{ border:1px solid #CCCCCC; }
+
 div#top_nav{ 
 	text-align: right; 
 	width: 835px; 
