--- a/generators/flexi_scaffold/templates/views/erb/show.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/show.html.erb
@@ -1,20 +1,18 @@
 <%% title "<%= singular_name.titleize %>" %>
-
 <%- for attribute in attributes -%>
 <p>
   <strong><%= attribute.column.human_name.titleize %>:</strong>
   <%%=h @<%= singular_name %>.<%= attribute.name %> %>
 </p>
 <%- end -%>
-
 <div id="control_box">
+<%- if action? :index -%>
+  <%%= link_to "Voltar", <%= plural_name %>_path, :class=>'view' %>
+<%- end -%>	
 <%- if action? :edit -%>
   <%%= link_to "Editar", edit_<%= singular_name %>_path(@<%= singular_name %>), :class=>'edit' %> |
 <%- end -%>
 <%- if action? :destroy -%>
   <%%= link_to "Excluir", @<%= singular_name %>, :confirm => 'Tem certeza que deseja excluir?', :class=>'delete', :method => :delete %> |
-<%- end -%>
-<%- if action? :index -%>
-  <%%= link_to "Ver todos", <%= plural_name %>_path, :class=>'view' %>
 <%- end -%>
 </div>
