--- a/generators/flexi_scaffold/templates/views/erb/show.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/show.html.erb
@@ -7,7 +7,7 @@
 <%- end -%>
 <div id="control_box">
 <%- if action? :index -%>
-  <%%= link_to "Voltar", <%= plural_name %>_path, :class=>'view' %> |
+  <%%= link_to "Voltar", <%= plural_name %>_path, :class=>'back' %> |
 <%- end -%>	
 <%- if action? :edit -%>
   <%%= link_to "Editar", edit_<%= singular_name %>_path(@<%= singular_name %>), :class=>'edit' %> |
