Changes erb templates

--- a/generators/flexi_scaffold/templates/views/erb/_form.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/_form.html.erb
@@ -1,6 +1,6 @@
-<%- for attribute in attributes -%>
-  <p>
-    <%%= f.label :<%= attribute.name %> %><br />
-    <%%= f.<%= attribute.field_type %> :<%= attribute.name %> %>
-  </p>
-<%- end -%>
+<% for attribute in attributes %>
+<p>
+  <%%= f.label :<%= attribute.name %> %><br />
+  <%%= f.<%= attribute.field_type %> :<%= attribute.name %> %>
+</p>
+<% end %>
