--- a/generators/flexi_scaffold/templates/views/erb/index.html.erb
+++ b/generators/flexi_scaffold/templates/views/erb/index.html.erb
@@ -38,4 +38,4 @@
     </tr>
   <%% end %>
 </table>
-<%%= will_paginate @<%= plural_name %>, :prev_label=>'&laquo; Anterior', :next_label=>'Próximo &raquo;' %>
+<%%= will_paginate @<%= plural_name %>, :previous_label=>'&laquo; Anterior', :next_label=>'Próximo &raquo;' %>
