Fix style block helpers

--- a/lib/generators/flexi_prepare/templates/application.html.erb
+++ b/lib/generators/flexi_prepare/templates/application.html.erb
@@ -23,7 +23,7 @@
 		<div id="sidenav">
 			<div class="menu">
 			  <%%= menu do |m| %>
-			    <%% m.users admin_users_path do %>
+			    <%%= m.users admin_users_path do %>
 			  	  <%%= image_tag 'users.png'  %> Usuários
 			    <%% end %>	
 			    <%%= m.menu1 "#menu" do %>
