--- a/lib/generators/flexi_auth/templates/views/erb/application.html.erb
+++ b/lib/generators/flexi_auth/templates/views/erb/application.html.erb
@@ -24,7 +24,7 @@
 			<div class="menu">
 			  <%%= menu do |m| %>
 			    <%%= m.<%= user_plural_name %> admin_<%= user_plural_name %>_path do %>
-			  	  <%%= image_tag 'users.png'  %> Usuários
+			  	  <%%= image_tag 'users.png'  %> <%= user_plural_class_name %>
 			    <%% end %>	
 			    <%%= m.menu1 "#menu" do %>
 			      <%%= image_tag 'menu.png'  %> Menu 1
