--- a/lib/generators/flexi_prepare/templates/application.css
+++ b/lib/generators/flexi_prepare/templates/application.css
@@ -273,6 +273,5 @@ div#header{ width: 900px; margin: 0 auto; }
   border-color:#E17984;
   color:#9E0B0F;	
 }
-/* Errors */
-.field_with_errors{ margin:0;padding:0;}
-.field_with_errors input { background-color:#FFEBEB; }
+/* Field Errors */
+input.field_with_errors { background-color:#FFEBEB; border-color: #E17984; }
