--- a/lib/generators/flexi/scaffold/templates/views/erb/_form.html.erb
+++ b/lib/generators/flexi/scaffold/templates/views/erb/_form.html.erb
@@ -8,6 +8,6 @@
   </div>
   <%- end -%>
   <div id="control_box">
-    <%%= f.submit "Salvar", :class => "button medium save blue" %> | <%%= link_to("Cancelar", admin_<%= plural_name %>_path, :class => "button medium red") %>
+    <%%= f.submit "Salvar", :class => "button medium blue" %> | <%%= link_to("Cancelar", admin_<%= plural_name %>_path, :class => "button medium red") %>
   </div>
 <%% end %>
