--- a/lib/generators/flexi/install/templates/application.css
+++ b/lib/generators/flexi/install/templates/application.css
@@ -9,7 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require bootstrap
- *= require bootstrap-responsive
+ *= require flexi/bootstrap
+ *= require flexi/bootstrap-responsive
  *= require_tree .
 */
