--- a/lib/generators/flexi/scaffold/templates/index.html.erb
+++ b/lib/generators/flexi/scaffold/templates/index.html.erb
@@ -5,7 +5,7 @@
   <%% end %>
 </p>
 
-<table class="table table-striped">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>ID</th>
