Changes layout templates

--- a/lib/generators/flexi/layout/templates/dashboard.html.erb
+++ b/lib/generators/flexi/layout/templates/dashboard.html.erb
@@ -1,4 +1,4 @@
-<h1><% title("Dashboard#index") %></h1>
+<% title("Dashboard#index") %>
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
 <div class="hero-unit">
