Upgrade to Twitter Bootstrap 3.1.1

--- a/lib/generators/flexi/install/templates/application.css
+++ b/lib/generators/flexi/install/templates/application.css
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require flexi/bootstrap
- *= require flexi/bootstrap-responsive
+ *= require flexi/bootstrap-theme
  *= require_tree .
 */
