--- a/lib/generators/flexi/layout/templates/_navbar.html.erb
+++ b/lib/generators/flexi/layout/templates/_navbar.html.erb
@@ -1,6 +1,5 @@
-<div class="nav-collapse">
-  <ul class="nav">
-    <%%= menu('Home', root_path) %>
-    <%%= menu('Help', '#help') %>
-  </ul>
-</div><!--/.nav-collapse -->
+<ul class="nav navbar-nav">
+  <%%= menu('Dashboard', root_path) %>
+  <%%= menu('Settings', '#settings') %>
+  <%%= menu('Help', '#help') %>
+</ul>
