--- a/lib/generators/flexi/layout/templates/application.css
+++ b/lib/generators/flexi/layout/templates/application.css
@@ -10,7 +10,7 @@
  *
  *= require_self
  *= require flexi/bootstrap
- *= require flexi/bootstrap-responsive
+ *= require flexi/bootstrap-theme
  *= require layout
  *= require_tree .
 */
