--- a/lib/generators/flexi/layout/templates/_sidebar.html.erb
+++ b/lib/generators/flexi/layout/templates/_sidebar.html.erb
@@ -1,16 +1,13 @@
-<div class="well sidebar-nav">
-  <ul class="nav nav-list">
-    <li class="nav-header">Sidebar</li>
-    <%- (1..3).each do |i| -%>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <% end %>
-    <li class="nav-header">Sidebar</li>
-    <%- (1..3).each do |i| -%>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <% end %>
-  </ul>
-</div><!--/.well -->
+<ul class="nav nav-sidebar">
+  <li class="active"><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+</ul>
+
+<ul class="nav nav-sidebar">
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">Menu</a></li>
+</ul>
