--- a/lib/generators/flexi/layout/templates/_user_dropdown.html.erb
+++ b/lib/generators/flexi/layout/templates/_user_dropdown.html.erb
@@ -1,11 +1,12 @@
-<div class="btn-group pull-right">
-  <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-    <i class="icon-user"></i> Username
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu">
-    <li><a href="#">Profile</a></li>
-    <li class="divider"></li>
-    <li><a href="#">Sign Out</a></li>
-  </ul>
-</div>
+<ul class="nav navbar-nav navbar-right">
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <span class="glyphicon glyphicon-user"></span> Username <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#">Profile</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Sign Out</a></li>
+    </ul>
+  </li>
+</ul>
