--- a/lib/generators/flexi/layout/templates/layout.css
+++ b/lib/generators/flexi/layout/templates/layout.css
@@ -1,10 +1,10 @@
 /* Your custom css stylesheets goes here */
-body{padding-top:40px;padding-bottom:40px;}
+/*body{padding-top:40px;padding-bottom:40px;}
 fieldset legend{margin-bottom:0;}
 .sidebar-nav{padding:9px 0;}
 .page-header{padding-bottom:0px !important;}
 .actions{text-align:center !important;width:15%}
-/* error fields */
+
 .control-label.error {color: #b94a48;}
 .control-group input.error,
 .control-group select.error,
@@ -13,4 +13,105 @@ fieldset legend{margin-bottom:0;}
 .control-group select.error:focus,
 .control-group textarea.error:focus {border-color: #953b39; -webkit-box-shadow: 0 0 6px #d59392; -moz-box-shadow: 0 0 6px #d59392; box-shadow: 0 0 6px #d59392;}
 .control-group .error .input-prepend .add-on,
-.control-group .error .input-append .add-on {color: #b94a48;background-color: #f2dede; border-color: #b94a48;}
+.control-group .error .input-append .add-on {color: #b94a48;background-color: #f2dede; border-color: #b94a48;}*/
+
+/*
+ * Base structure
+ */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {padding-top: 50px;}
+
+/*
+ * Alerts
+ */
+.alert h3 {margin: 0 0 10px 0;}
+.alert p {margin: 0 0 10px 0;}
+
+
+/*
+ * Global add-ons
+ */
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
+}
+
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+
+/*
+ * Placeholder dashboard ideas
+ */
+
+.placeholders {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.placeholders h4 {
+  margin-bottom: 0;
+}
+.placeholder {
+  margin-bottom: 20px;
+}
+.placeholder img {
+  display: inline-block;
+  border-radius: 50%;
+}
