--- a/lib/generators/flexi/layout/templates/layout.html.erb
+++ b/lib/generators/flexi/layout/templates/layout.html.erb
@@ -2,75 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Flexi Generators">
     <title><%%= content_for?(:title) ? "#{app_name} - #{yield(:title)}" : "<%= app_name %>" %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <%%= csrf_meta_tags %>
     <%%= stylesheet "application", :media => "all" %>
     <%%= yield(:stylesheet) %>
     <!--[if lt IE 9]>
-      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   </head>
 
   <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <%- if layout_type == "fluid" -%>
-          <div class="container-fluid">
-        <%- else -%>
-          <div class="container">
-        <%- end -%>
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <%%= link_to(app_name, root_path, :class => "brand") %>
-          <%%= render 'layouts/user_dropdown' %>
-          <%%= render 'layouts/navbar' %>
+          </button>
+          <%%= link_to(app_name, root_path, :class => "navbar-brand") %>
         </div>
+        <div class="collapse navbar-collapse">
+          <%%= render 'layouts/navbar' %>
+          <%%= render 'layouts/user_dropdown' %>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
 
-  <%- if layout_type == "fluid" -%>
     <div class="container-fluid">
-  <%- else -%>
-    <div class="container">
-  <%- end -%>
-    <%- if layout_type == "fluid" -%>
-      <div class="row-fluid">
-    <%- else -%>
       <div class="row">
-    <%- end -%>
-        <div class="span3">
+        <div class="col-sm-3 col-md-2 sidebar">
           <%%= render 'layouts/sidebar' %>
-        </div><!--/span-->
+        </div>
 
-        <div class="span9">
-          <div class="page-header">
-            <%%= content_tag :h3, yield(:title) if show_title %>
-          </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <%%= content_tag(:h2, yield(:title), :class => 'page-header') if show_title %>
           <%%= display_flash_message %>
           <%%= yield %>
-        </div><!--/span-->
-      </div><!--/row-->
+        </div>
+      </div>
+    </div><!-- /.container -->
 
-      <hr>
-
-      <footer>
-        <p><%%= app_name %> &copy;  <%= Time.now.year %></p>
-      </footer>
-
-    </div><!--/.fluid-container-->
-    
     <%%= javascript_include_tag "application" %>
     <%%= yield(:javascript) %>
   </body>
