--- a/lib/generators/flexi/scaffold/templates/_form.html.erb
+++ b/lib/generators/flexi/scaffold/templates/_form.html.erb
@@ -1,20 +1,18 @@
 <%%= error_messages_for(@<%= singular_table_name %>) %>
 
-<%%= form_for(@<%= singular_table_name %>, :html => { :class => 'form-horizontal' }) do |f| %>
-  <fieldset>
-    <%- attributes.each do |attribute| -%>
-    <div class="control-group">
-      <%%= f.label :<%= attribute.name %>, :class => 'control-label' %>
-      <div class="controls">
-        <%%= f.<%= attribute.field_type %> :<%= attribute.name %>, :class => 'span7' %>
-      </div>
-    </div>
-    <%- end -%>    
-    <div class="form-actions">
-      <%%= button_tag(nil, :class => "btn btn-primary") do |b| %>
-        <i class="icon-ok icon-white"></i> Save
-      <%% end %> or
-      <%%= link_to 'Cancel', <%= index_helper %>_path, :class => 'btn' %>
-    </div>
-  </fieldset>
+<%%= form_for(@<%= singular_table_name %>, :html => { :role => 'form' }) do |f| %>
+  <%- attributes.each do |attribute| -%>
+  <div class="form-group">
+    <%%= f.label :<%= attribute.name %>, :class => "control-label" %>
+    <%%= f.<%= attribute.field_type %> :<%= attribute.name %>, :class => "form-control" %>
+  </div>
+  <%- end -%>
+
+  <hr/>
+  <div align="right">
+    <%%= link_to 'Cancel', <%= index_helper %>_path, :class => 'btn btn-lg btn-default' %>
+    <%%= button_tag(nil, :class => "btn btn-lg btn-success") do |b| %>
+      <i class="glyphicon glyphicon-ok"></i> Save
+    <%% end %>
+  </div>
 <%% end %>
