--- a/lib/generators/flexi/scaffold/templates/index.html.erb
+++ b/lib/generators/flexi/scaffold/templates/index.html.erb
@@ -1,36 +1,46 @@
 <%% title("<%= plural_table_name.titleize %>") %>
-<p>
-  <%%= link_to(new_<%= singular_table_name %>_path, :class => 'btn btn-success') do %>
-    <i class="icon-plus icon-white"></i> New <%= singular_table_name %>
-  <%% end %>
-</p>
+
+<div class="row">
+  <div class="form-group col-lg-6">
+    <%%= link_to(new_<%= singular_table_name %>_path, :class => 'btn btn-lg btn-success') do %>
+      <i class="glyphicon glyphicon-plus"></i> New <%= singular_table_name %>
+    <%% end %>
+  </div>
+  <div class="form-group col-lg-offset-2 col-lg-4">
+    <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+      <input type="text" class="form-control" placeholder="Search ...">
+    </div>
+  </div>
+</div>
 
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>ID</th>
       <%- unless attributes.empty? -%>
       <th><%= attributes.first.human_name.titleize %></th>
       <%- end -%>
       <th>Created at</th>
-      <th class="actions">Actions</th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
     <%%= content_tag_for(:tr, @<%= plural_table_name %>) do |<%= singular_table_name %>| %>
-      <td>#<%%= <%= singular_table_name %>.id %></td>
       <%- unless attributes.empty? -%>
       <td><strong><%%= link_to("#{<%= singular_table_name %>.<%= attributes.first.name %>}", <%= singular_table_name %>) %></strong></td>
       <% end -%>
-      <td><%%= <%= singular_table_name %>.created_at %></td>
-      <td class="actions">
-        <%%= link_to(edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :class => 'btn btn-mini btn-primary') do %>
-          <i class="icon-edit icon-white"></i> Edit
+      <td><%%= l(<%= singular_table_name %>.created_at, :format => :short) %></td>
+      <td align="center">
+        <%%= link_to(edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :class => 'btn btn-primary') do %>
+          <i class="glyphicon glyphicon-edit"></i> Edit
         <%% end %>
-        <%%= link_to(<%= singular_table_name %>, :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-mini btn-danger') do %>
-         <i class="icon-remove icon-white"></i> Delete
+        <%%= link_to(<%= singular_table_name %>, :data => { :confirm => 'Are you sure?' }, :method => :delete, :class => 'btn btn-danger') do %>
+         <i class="glyphicon glyphicon-trash"></i> Delete
         <%% end %>
       </td>
     <%% end %>
-   </tbody>
+    <%% if(@<%= plural_table_name %>.length == 0)%>
+      <tr><td colspan="3" align="center">Nenhum registro foi encontrado</td></tr>
+    <%% end %>
+  </tbody>
 </table>
