--- a/lib/generators/flexi/scaffold/templates/show.html.erb
+++ b/lib/generators/flexi/scaffold/templates/show.html.erb
@@ -1,4 +1,4 @@
-<%% title "<%= singular_table_name.titleize %> ##{@<%= singular_table_name %>.id}" %>
+<%% title "<%= singular_table_name.titleize %>" %>
 
 <table class="table table-bordered">
   <tbody>
@@ -8,14 +8,13 @@
   </tbody>
 </table>
 
-<div class="form-actions">
-  <%%= link_to(<%= index_helper %>_path, :class => 'btn') do %>
-    <i class="icon-circle-arrow-left"></i> Back
-  <%% end %> or 
-  <%%= link_to(edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-primary') do %>
-    <i class="icon-edit icon-white"></i> Edit
+
+  <%%= link_to(<%= index_helper %>_path, :class => 'btn btn-lg btn-default') do %>
+    <i class="glyphicon glyphicon-circle-arrow-left"></i> Back
+  <%% end %> ou
+  <%%= link_to(edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-lg btn-primary') do %>
+    <i class="glyphicon glyphicon-edit"></i> Edit
   <%% end %> 
-  <%%= link_to(@<%= singular_table_name %>, :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger') do %>
-    <i class="icon-remove icon-white"></i> Delete
+  <%%= link_to(@<%= singular_table_name %>, :method => 'delete', :data => { :confirm => 'Are you sure?' }, :class => 'btn btn-lg btn-danger') do %>
+    <i class="glyphicon glyphicon-trash"></i> Delete
   <%% end %>
-</div>
